2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Move bound_t/bounds_t, discreteInterval_t definition into Function.
	* include/roboptim/core/function.hh:
	Move bound_t/bounds_t and discreteInterval_t definition here
	with the associated methods.
	* include/roboptim/core/problem.hh: Remove bound/bounds_t definition
	and associated methods.
	* include/roboptim/core/problem.hxx: Fix makeInfiniteBound calls.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Remove discreteInterval_t definition.
	* tests/simple.cc: Check that the problem is always well-formed.
	* tests/simple.stdout: Regenerate.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Use pkg-config to detect roboptim-core.
	* roboptim-core.m4: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update version number to 0.2.
	* configure.ac: Increment version number.
	* src/Makefile.am: Update version-info.
	* tests/visualization-gnuplot-function.stdout,
	* tests/visualization-gnuplot-simple.stdout:
	Regenerate from reference.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement plug-in mechanism.
	* .gitignore: Do not allow libltdl to be committed.
	* Makefile.am: Remove packages, add libltdl from SUBDIRS.
	* build-aux/argz.m4: New.
	* build-aux/init.mk: Restyle.
	* build-aux/ltdl.m4: New.
	* configure.ac: Search for libltdl.
	* include/Makefile.am: Add new headers.
	* include/roboptim/core/derivable-function.hh:
	Rename from include/roboptim-core/derivable-function.hh.
	* include/roboptim/core/function.hh:
	Rename from include/roboptim-core/function.hh.
	* include/roboptim/core/fwd.hh:
	Rename from include/roboptim-core/fwd.hh.
	* include/roboptim/core/generic-solver.hh:
	Rename from include/roboptim-core/generic-solver.hh.
	* include/roboptim/core/indent.hh:
	Rename from include/roboptim-core/indent.hh.
	* include/roboptim/core/linear-function.hh: